syntax = "proto3";

service DFSService {
    rpc Lock(FileRequest) returns (EmptyResponse);
    rpc Store(stream FileRequest) returns (FileContent);
    rpc Fetch(FileRequest) returns (stream FileContent);
    rpc Delete(FileRequest) returns (EmptyResponse);
    rpc PubSubFileEvents (EmptyResponse) returns (FilesList);
}

message FilesList {
    repeated FileRequest files = 1;
}

message FileRequest {
    string fileName = 1;
    bytes fileContent = 2;
    uint32 fileChecksum = 3;
    uint64 mtime = 4;
    string userid = 5;
}

message FileContent {
    int64 bytesWritten = 1;
    bytes fileContent = 2;
}

message EmptyResponse {}
